Bug 270597 - Cannot anchor note in state diagram.
Summary: Cannot anchor note in state diagram.
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-10 15:56 UTC by Sebastian
Modified: 2013-11-06 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian 2011-04-10 15:56:35 UTC
Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

Like in subject, cannot connect note with any symbol on state diagram, after try umbrello shows dialog window with error: Not correct connection (transalte from polish :) )

Reproducible: Always



Expected Results:  
Possible connection between symbols and note. 

OS: Linux (x86_64) release 2.6.38-ARCH
Compiler: gcc
Comment 1 Ralf Habacker 2012-03-09 12:28:54 UTC
I can confirm this bug on windows with trunk. When anchoring a state and a note, an error message box is displayed with "illegal usage of association" (translated from german)
Comment 2 Oliver Kellogg 2012-03-09 16:47:27 UTC
SVN commit 1284662 by okellogg:

AssocRules::allowAssociation(AssociationType, UMLWidget*, UMLWidget*) :

Exclude NULL when comparing widgetA->umlObject() and widgetB->umlObject()



 M  +2 -0      ChangeLog  
 M  +1 -1      umbrello/assocrules.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1284662
Comment 3 Ralf Habacker 2013-11-06 17:18:42 UTC
apply fixed bug from 4.9.0 changelog