AssocRules::allowAssociation(AssociationType, UMLWidget*, UMLWidget*) :

Exclude NULL when comparing widgetA->umlObject() and widgetB->umlObject()

BUG: 270597

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1284662